Simplify README for non-technical students and add HUME_SECRET_KEY to env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Copy this file to .env and fill in your API keys:
 #   cp .env.example .env
 
-# Hume AI (optional — for advanced voice pipeline)
+# Hume AI — for live voice-to-voice (Tab 3)
 HUME_API_KEY=your_hume_api_key_here
+HUME_SECRET_KEY=your_hume_secret_key_here
 HUME_CONFIG_ID=your_hume_config_id_here
 
 # Anthropic Claude
@@ -12,7 +13,7 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o-mini
 
-# LLM Provider — "claude" or "openai"
+# LLM Provider — "claude" or "openai" (default for CLM server)
 LLM_PROVIDER=claude
 
 # Server settings (usually no need to change)
